hphp/hack/test/typecheck/enum_as_false_input.php.rust_elab.exp
File "enum_as_false_input.php", line 12, characters 6-14:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum_as_false_input.php", line 17, characters 6-13:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum_as_false_input.php", line 23, characters 10-24:
Invalid return type (Typing[4110])
  File "enum_as_false_input.php", line 22, characters 27-35:
  Expected `DerpyEnum`
  File "enum_as_false_input.php", line 17, characters 6-13:
  But got `BaitEnum`; implicitly defined constant `::class` is a string that contains the fully qualified name of `BaitEnum`
  File "enum_as_false_input.php", line 23, characters 10-17:
    where the class `BaitEnum` was referenced here
